# jacktools

./: .gitignore  README.md  prompt.txt  pyproject.toml  setup.py
benchmarks/: bench.py  buffer.py
benchmarks/stats/: welford.py
jacktools/buffer/: __init__.pxd  __init__.py  buffer.pyi  buffer.pyx
jacktools/buffer/buffer_double/: __init__.py  buffer_double.pxd  buffer_double.pyi  buffer_double.pyx
jacktools/buffer/buffer_int/: __init__.py  buffer_int.pxd  buffer_int.pyi  buffer_int.pyx
jacktools/increments/: __init__.py
jacktools/increments/extremums/: __init__.py  extremums.pyi  extremums.pyx
jacktools/increments/outcome/: __init__.py  outcome.pyi  outcome.pyx
jacktools/increments/over_under/: __init__.py  over_under.pyi  over_under.pyx
jacktools/increments/welford/: __init__.py  welford.pyi  welford.pyx
jacktools/increments/zeros/: __init__.py  zeros.pyi  zeros.pyx
jacktools/stats/: __init__.py
jacktools/stats/welford/: README.md  __init__.py  welford_window.pyi  welford_window.pyx
tests/: buffer.py  stats.py  test.py
