[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython==3.2.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "jacktools"
version = "0.2.0"
description = "Jack's Python/Cython tools and micro-frameworks"
authors = [{name = "Jack", email = "moraljack2@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = "==3.14.0"
dependencies = [
    "Cython==3.2.1"
]

[tool.setuptools.packages]
find = {}
